fix spacing issues with nav bar and footer

--- a/main.css
+++ b/main.css
@@ -3,6 +3,11 @@ html, body {
 	height: 100%;
 }
 
+body {
+	display: flex;
+	flex-direction: column;
+}
+
 a {
 	text-decoration: none;
 }
@@ -36,7 +41,8 @@ nav a:first-child {
 }
 
 .content {
-	padding: 20px 0px 20px 20px;
+	flex: 1;
+	padding: 20px 0px;
 }
 
 p {
@@ -44,15 +50,13 @@ p {
 }
 
 footer {
-	position: fixed;
-	bottom: 0;
 	width: 100%;
 	color: white;
 	background-color: black;
-	padding: 2px 0px 2px 5px;
 }
 
 footer p {
 	margin: 0px;
 	font-family: "Times New Roman";
+	padding-left: 5px;
 }
